Link libcore to executable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,8 @@ list(REMOVE_ITEM srcs src/main.cpp)
 add_library(core STATIC ${srcs})
 add_executable(${PROJECT_NAME} src/main.cpp)
 
+target_link_libraries(${PROJECT_NAME} PRIVATE core)
+
 if (TESTS)
    message(STATUS "Testing included")
 
